Solve overflow-x bug in safari browser

--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+html {
+  overflow-x: hidden; }
+
 body {
   font-size: 16px;
   font-family: "Open Sans", Arial, sans-serif; }
