--- a/scss/helper/global.scss
+++ b/scss/helper/global.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-size: 16px;
   font-family: $font-family;
